--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-    "name": "newshore",
+    "homepage": "https://github.com/CamiloAranzazu/coxti-frontend",
+    "name": "coxti-frontend",
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
